--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
         visibility: hidden;
       ">
 
-    <symbol xmlns="http://www.w3.org/2000/svg" viewBox="0 0 107 73">
+    <symbol id="i-logo" viewBox="0 0 107 73">
       <defs />
       <path d="M106.67.29H0v72.59h106.67z" />
       <path fill="#fff"
@@ -62,6 +62,26 @@
     </symbol>
 
   </svg>
+
+  <header>
+    <div class="container">
+      <div class="logo">
+        <a href="javascript:void(0);">
+          <svg class="svg-icon">
+            <use xlink:href="#i-logo"></use>
+          </svg>
+        </a>
+      </div>
+
+      <nav>
+        <div class="nav__burger">
+          <div class="nav__burger-box">
+            <div class="nav__burger-inner"></div>
+          </div>
+        </div>
+      </nav>
+    </div>
+  </header>
 
   <script src="assets/js/bundle.js" defer></script>
 </body>
