first screen edits

--- a/src/index.html
+++ b/src/index.html
@@ -76,9 +76,9 @@
   </svg>
 
   <div class="wrap">
-    <div class="container">
 
-      <header>
+    <header>
+      <div class="container">
         <div class="logo">
           <a href="javascript:void(0);">
             <svg class="svg-icon">
@@ -94,37 +94,69 @@
             </div>
           </div>
         </nav>
-      </header>
+      </div>
+    </header>
 
-      <aside>
-        <a href="javascript:void(0);">О нас</a>
-        <a href="javascript:void(0);">Преимущества</a>
-        <a href="javascript:void(0);">Интеграции</a>
-        <a href="javascript:void(0);">Тарифы</a>
-        <a href="tel:+79282882828">8 928 288 28 28</a>
+    <main>
+      <section class="intro">
+        <div class="container">
 
-        <div class="aside__icon-wrapper">
+          <div class="bubbles">
 
-          <a href="javascript:void(0);" class="aside__icon">
-            <svg class="svg-icon">
-              <use xlink:href="#i-inst"></use>
-            </svg>
-          </a>
+            <div class="bubble-wrap">
+              <div class="bubble bubble-rectangle">
+                <img src="assets/img/icons/pencil.webp" alt="">
+                <span>Высокая конверсия в заявки</span>
+              </div>
+            </div>
 
-          <a href="javascript:void(0);" class="aside__icon">
-            <svg class="svg-icon">
-              <use xlink:href="#i-mail"></use>
-            </svg>
-          </a>
+            <div class="bubble-wrap">
+              <div class="bubble bubble-square--small">
+                <img src="assets/img/icons/image.webp" alt="">
+              </div>
+            </div>
+
+          </div>
+
+          <div class="intro__text">
+            <h1>Сайт жилого комплекса от профессионалов
+            </h1>
+            <h2>Эффективный сайт с высокой конверсией по цене от 2 М² вашей недвижимости
+            </h2>
+          </div>
 
         </div>
+      </section>
+    </main>
 
-        <a class="button" href="javascript:void(0);" role="link">
-          Заказать сайт
+
+    <aside>
+      <a href="javascript:void(0);">О нас</a>
+      <a href="javascript:void(0);">Преимущества</a>
+      <a href="javascript:void(0);">Интеграции</a>
+      <a href="javascript:void(0);">Тарифы</a>
+      <a href="tel:+79282882828">8 928 288 28 28</a>
+
+      <div class="aside__icon-wrapper">
+
+        <a href="javascript:void(0);" class="aside__icon">
+          <svg class="svg-icon">
+            <use xlink:href="#i-inst"></use>
+          </svg>
         </a>
-      </aside>
 
-    </div>
+        <a href="javascript:void(0);" class="aside__icon">
+          <svg class="svg-icon">
+            <use xlink:href="#i-mail"></use>
+          </svg>
+        </a>
+
+      </div>
+
+      <a class="button" href="javascript:void(0);" role="link">
+        Заказать сайт
+      </a>
+    </aside>
 
   </div>
   <script src="assets/js/bundle.js" defer></script>
