intro final edit

--- a/src/index.html
+++ b/src/index.html
@@ -88,9 +88,9 @@
         </div>
 
         <nav>
-          <div class="nav__burger">
-            <div class="nav__burger-box">
-              <div class="nav__burger-inner"></div>
+          <div class="hamburger hamburger--slider">
+            <div class="hamburger-box">
+              <div class="hamburger-inner"></div>
             </div>
           </div>
         </nav>
@@ -116,6 +116,32 @@
               </div>
             </div>
 
+            <div class="bubble-wrap">
+              <div class="bubble bubble-rectangle">
+                <img src="assets/img/icons/checked.webp" alt="">
+                <span>Готовые Интеграции</span>
+              </div>
+            </div>
+
+            <div class="bubble-wrap">
+              <div class="bubble bubble-square--small">
+                <img src="assets/img/icons/idea.webp" alt="">
+              </div>
+            </div>
+
+            <div class="bubble-wrap">
+              <div class="bubble bubble-square--small">
+                <img src="assets/img/icons/binocular.webp" alt="">
+              </div>
+            </div>
+
+            <div class="bubble-wrap">
+              <div class="bubble bubble-rectangle">
+                <img src="assets/img/icons/donut.webp" alt="">
+                <span>Эксклюзивный дизайн</span>
+              </div>
+            </div>
+
           </div>
 
           <div class="intro__text">
@@ -124,6 +150,10 @@
             <h2>Эффективный сайт с высокой конверсией по цене от 2 М² вашей недвижимости
             </h2>
           </div>
+
+          <a class="button" href="javascript:void(0);" role="link">
+            <span>Заказать сайт</span>
+          </a>
 
         </div>
       </section>
@@ -154,7 +184,7 @@
       </div>
 
       <a class="button" href="javascript:void(0);" role="link">
-        Заказать сайт
+        <span>Заказать сайт</span>
       </a>
     </aside>
 
