--- a/src/index.html
+++ b/src/index.html
@@ -157,6 +157,106 @@
 
         </div>
       </section>
+
+      <section class="advantages">
+        <div class="container">
+
+          <h2>Что мы делаем?</h2>
+
+          <div class="bubbles">
+            <div class="bubble-wrap bubble-wrap--big-br">
+              <div class="bubble bubble-square--big">
+                <img src="assets/img/icons/biceps.webp" alt="">
+              </div>
+            </div>
+
+            <p>Разрабатываем проекты любой сложности от простых сайтов-визиток до мощных проектов с миллионной
+              посещаемостью</p>
+
+            <div class="bubble-wrap bubble-wrap--big-br">
+              <div class="bubble bubble-square--big">
+                <img src="assets/img/icons/bookmark.webp" alt="">
+              </div>
+            </div>
+
+            <p>Полную аналитику существующего продукта, включающая анализ эффективности и CJM</p>
+
+            <div class="bubble-wrap bubble-wrap--big-br">
+              <div class="bubble bubble-square--big">
+                <img src="assets/img/icons/alarm-clock.webp" alt="">
+              </div>
+            </div>
+
+            <p>Разрабатываем готовые решения и модули для сайтов. Сокращаем время и стоимость их реализации для клиента
+            </p>
+
+            <div class="advantages__tag-wrap">
+
+              <div class="bubble-wrap">
+                <div class="bubble">
+                  <span>
+                    Поддержка
+                  </span>
+                </div>
+              </div>
+
+              <div class="bubble-wrap">
+                <div class="bubble">
+                  <span>
+                    Эксклюзивный дизайн
+                  </span>
+                </div>
+              </div>
+
+              <div class="bubble-wrap">
+                <div class="bubble">
+                  <span>
+                    Анализ целевой аудитории
+                  </span>
+                </div>
+              </div>
+
+              <div class="bubble-wrap bubble-wrap--extended">
+                <div class="bubble">
+                  <span>
+                    Продуманная структура сайта
+                  </span>
+                </div>
+              </div>
+
+              <div class="bubble-wrap">
+                <div class="bubble">
+                  <span>
+                    Адаптивная верстка
+                  </span>
+                </div>
+              </div>
+
+              <div class="bubble-wrap">
+                <div class="bubble">
+                  <span>
+                    Аудит вашего объекта
+                  </span>
+                </div>
+              </div>
+
+              <div class="advantages__tag">
+                <span>
+                  Веб-разработка
+                </span>
+              </div>
+
+              <div class="advantages__tag">
+                <span>
+                  Аудит конкурентов
+                </span>
+              </div>
+
+            </div>
+
+          </div>
+        </div>
+      </section>
     </main>
 
 
