--- a/src/index.html
+++ b/src/index.html
@@ -103,40 +103,40 @@
 
           <div class="bubbles">
 
-            <div class="bubble-wrap">
-              <div class="bubble bubble-rectangle">
+            <div class="bubble-wrap bubble-wrap-rectangle">
+              <div class="bubble">
                 <img src="assets/img/icons/pencil.webp" alt="">
                 <span>Высокая конверсия в заявки</span>
               </div>
             </div>
 
-            <div class="bubble-wrap">
-              <div class="bubble bubble-square--small">
+            <div class="bubble-wrap bubble-wrap-square--small">
+              <div class="bubble">
                 <img src="assets/img/icons/image.webp" alt="">
               </div>
             </div>
 
-            <div class="bubble-wrap">
-              <div class="bubble bubble-rectangle">
+            <div class="bubble-wrap bubble-wrap-rectangle">
+              <div class="bubble">
                 <img src="assets/img/icons/checked.webp" alt="">
                 <span>Готовые Интеграции</span>
               </div>
             </div>
 
-            <div class="bubble-wrap">
-              <div class="bubble bubble-square--small">
+            <div class="bubble-wrap bubble-wrap-square--small">
+              <div class="bubble">
                 <img src="assets/img/icons/idea.webp" alt="">
               </div>
             </div>
 
-            <div class="bubble-wrap">
-              <div class="bubble bubble-square--small">
+            <div class="bubble-wrap bubble-wrap-square--small">
+              <div class="bubble">
                 <img src="assets/img/icons/binocular.webp" alt="">
               </div>
             </div>
 
-            <div class="bubble-wrap">
-              <div class="bubble bubble-rectangle">
+            <div class="bubble-wrap bubble-wrap-rectangle">
+              <div class="bubble">
                 <img src="assets/img/icons/donut.webp" alt="">
                 <span>Эксклюзивный дизайн</span>
               </div>
@@ -163,9 +163,19 @@
 
           <h2>Что мы делаем?</h2>
 
+          <div class="bubbles bubbles--decorative">
+            <div class="circle circle--orange circle--big">
+              <div class="circle-nested"></div>
+            </div>
+
+            <div class="square square--small">
+              <div class="square-nested"></div>
+            </div>
+          </div>
+
           <div class="bubbles">
-            <div class="bubble-wrap bubble-wrap--big-br">
-              <div class="bubble bubble-square--big">
+            <div class="bubble-wrap bubble-wrap-square--big">
+              <div class="bubble">
                 <img src="assets/img/icons/biceps.webp" alt="">
               </div>
             </div>
@@ -173,16 +183,16 @@
             <p>Разрабатываем проекты любой сложности от простых сайтов-визиток до мощных проектов с миллионной
               посещаемостью</p>
 
-            <div class="bubble-wrap bubble-wrap--big-br">
-              <div class="bubble bubble-square--big">
+            <div class="bubble-wrap bubble-wrap-square--big">
+              <div class="bubble">
                 <img src="assets/img/icons/bookmark.webp" alt="">
               </div>
             </div>
 
             <p>Полную аналитику существующего продукта, включающая анализ эффективности и CJM</p>
 
-            <div class="bubble-wrap bubble-wrap--big-br">
-              <div class="bubble bubble-square--big">
+            <div class="bubble-wrap bubble-wrap-square--big">
+              <div class="bubble">
                 <img src="assets/img/icons/alarm-clock.webp" alt="">
               </div>
             </div>
