--- a/src/index.html
+++ b/src/index.html
@@ -164,11 +164,19 @@
           <h2>Что мы делаем?</h2>
 
           <div class="bubbles bubbles--decorative">
-            <div class="circle circle--orange circle--big">
+            <div class="circle circle--big">
               <div class="circle-nested"></div>
             </div>
 
-            <div class="square square--small">
+            <div class="circle circle--small">
+              <div class="circle-nested"></div>
+            </div>
+
+            <div class="circle circle--orange circle--small">
+              <div class="circle-nested"></div>
+            </div>
+
+            <div class="square square--orange square--small">
               <div class="square-nested"></div>
             </div>
           </div>
