--- a/src/index.html
+++ b/src/index.html
@@ -275,6 +275,186 @@
           </div>
         </div>
       </section>
+
+      <section class="integrations">
+        <div class="container">
+          <div class="integrations__text-wrap">
+            <h2>
+              Готовые решения и интеграции
+            </h2>
+            <p>
+              Готовые функции и интеграции, необходимые каждому застройщику уже реализованы и готовы к использованию на
+              вашем новом сайте
+            </p>
+          </div>
+
+
+        </div>
+
+        <div class="cards-wrap">
+          <div class="cards">
+
+            <div class="cards__card-bg">
+
+              <div class="cards__card">
+                <div class="cards__toggle"></div>
+                <div class="cards__headline">
+                  Каталог квартир по параметрам
+                </div>
+                <div class="cards__hr"></div>
+                <div class="cards__text">
+                  Продуманный каталог подбора квартир в жилом комплексе
+                </div>
+              </div>
+
+            </div>
+
+            <div class="cards__card-bg">
+
+              <div class="cards__card">
+                <div class="cards__toggle"></div>
+                <div class="cards__headline">
+                  3D тур
+                </div>
+                <div class="cards__hr"></div>
+                <div class="cards__text">
+                  Эффектная демонстрация вашей недвижимости потенциальным покупателям
+                </div>
+                <div class="cards__img">
+                  <div class="bubble-wrap bubble-wrap-square--small">
+                    <div class="bubble">
+                      <img src="assets/img/icons/houses.webp" alt="">
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+
+            <div class="cards__card-bg">
+
+              <div class="cards__card">
+                <div class="cards__toggle"></div>
+                <div class="cards__headline">
+                  Шахматка выбора квартир
+                </div>
+                <div class="cards__hr"></div>
+                <div class="cards__text">
+                  Удобный формат выбора квартир по генплану или фасаду здания
+                </div>
+              </div>
+
+            </div>
+
+            <div class="cards__card-bg">
+
+              <div class="cards__card">
+                <div class="cards__toggle"></div>
+                <div class="cards__headline">
+                  Форма обратного звонка с видео
+                </div>
+                <div class="cards__hr"></div>
+                <div class="cards__text">
+                  Форма обратного звонка с видеорядом для большего вовлечения
+                </div>
+              </div>
+
+            </div>
+
+            <div class="cards__card-bg">
+
+              <div class="cards__card">
+                <div class="cards__toggle"></div>
+                <div class="cards__headline">
+                  Каталог коммерческой недвижимости
+                </div>
+                <div class="cards__hr"></div>
+                <div class="cards__text">
+                  Каталог недвижимости для бизнеса с визуальный выбором и параметрическим фильтром
+                </div>
+              </div>
+
+            </div>
+
+            <div class="cards__card-bg">
+
+              <div class="cards__card">
+                <div class="cards__toggle"></div>
+                <div class="cards__headline">
+                  Чат-бот
+                </div>
+                <div class="cards__hr"></div>
+                <div class="cards__text">
+                  Искусственной интеллект для автоматизируемого общения с вашими потенциальными клиентами
+                </div>
+                <div class="cards__img">
+                  <div class="bubble-wrap bubble-wrap-square--small">
+                    <div class="bubble">
+                      <img src="assets/img/icons/speech-balloon.webp" alt="">
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+
+            <div class="cards__card-bg">
+
+              <div class="cards__card">
+                <div class="cards__toggle"></div>
+                <div class="cards__headline">
+                  Ипотечный калькулятор
+                </div>
+                <div class="cards__hr"></div>
+                <div class="cards__text">
+                  Ипотечный калькулятор в несколько шагов с удобной навигацией и заявкой на расчет
+                </div>
+                <div class="cards__img">
+                  <div class="bubble-wrap bubble-wrap-square--small">
+                    <div class="bubble">
+                      <img src="assets/img/icons/coin.webp" alt="">
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+
+            <div class="cards__card-bg">
+
+              <div class="cards__card">
+                <div class="cards__toggle"></div>
+                <div class="cards__headline">
+                  Модуль для обзора объекта 360°
+                </div>
+                <div class="cards__hr"></div>
+                <div class="cards__text">
+                  Возможность размещения на сайте обзора вашего объекта в режиме 360°
+                </div>
+              </div>
+
+            </div>
+
+            <div class="cards__card-bg">
+
+              <div class="cards__card">
+                <div class="cards__toggle"></div>
+                <div class="cards__headline">
+                  Модуль онлайн камер на объекте
+                </div>
+                <div class="cards__hr"></div>
+                <div class="cards__text">
+                  Удобный формат обзора стадии строительства объекта в режиме онлайн
+                </div>
+              </div>
+
+            </div>
+
+
+
+          </div>
+        </div>
+      </section>
     </main>
 
 
