--- a/src/index.html
+++ b/src/index.html
@@ -455,6 +455,104 @@
           </div>
         </div>
       </section>
+
+      <section class="modules">
+        <div class="container">
+          <div class="cards-wrap">
+            <div class="cards">
+
+              <div class="cards__card-bg">
+
+                <div class="cards__card">
+                  <div class="cards__toggle"></div>
+                  <div class="cards__headline">
+                    Каталог квартир по параметрам
+                  </div>
+                </div>
+
+              </div>
+
+              <div class="cards__card-bg">
+
+                <div class="cards__card">
+                  <div class="cards__toggle"></div>
+                  <div class="cards__headline">
+                    Интеграция с CRM (Bitrix24, amoCRM)
+                  </div>
+                </div>
+
+              </div>
+
+              <div class="cards__card-bg">
+
+                <div class="cards__card">
+                  <div class="cards__toggle"></div>
+                  <div class="cards__headline">
+                    Интеграция с Call Tracking
+                  </div>
+                </div>
+
+              </div>
+
+              <div class="cards__card-bg">
+
+                <div class="cards__card">
+                  <div class="cards__toggle"></div>
+                  <div class="cards__headline">
+                    Интеграция с Яндекс Недвижимость
+                  </div>
+                </div>
+
+              </div>
+
+              <div class="cards__card-bg">
+
+                <div class="cards__card">
+                  <div class="cards__toggle"></div>
+                  <div class="cards__headline">
+                    Интеграция с ЦИАН
+                  </div>
+                </div>
+
+              </div>
+
+              <div class="cards__card-bg">
+
+                <div class="cards__card">
+                  <div class="cards__toggle"></div>
+                  <div class="cards__headline">
+                    Интеграция с ROIstat
+                  </div>
+                </div>
+
+              </div>
+
+              <div class="cards__card-bg">
+
+                <div class="cards__card">
+                  <div class="cards__toggle"></div>
+                  <div class="cards__headline">
+                    Интеграция с ДомКлик
+                  </div>
+                </div>
+
+              </div>
+
+              <div class="cards__card-bg">
+
+                <div class="cards__card">
+                  <div class="cards__toggle"></div>
+                  <div class="cards__headline">
+                    Интеграция с Авито
+                  </div>
+                </div>
+
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
 
