example section start

--- a/src/index.html
+++ b/src/index.html
@@ -553,6 +553,43 @@
           </div>
         </div>
       </section>
+
+      <section class="examples">
+        <div class="container">
+          <h2>
+            Примеры пакетных решений
+          </h2>
+        </div>
+
+        <div class="cards-wrap">
+          <div class="cards">
+
+            <div class="cards__card-bg">
+
+              <div class="cards__card">
+
+                <div class="cards__hr"></div>
+                <div class="cards__text">
+                  Эффективный одностраничный сайт. Расскажет обо всех преимуществах объекта и позволит осуществить
+                  подбор квартиры.
+                </div>
+                <div class="cards__hr"></div>
+                <div class="cards__headline">
+                  Выбор планировок квартир
+                  Ипотечный калькулятор
+                  Модуль онлайн камер на объекте
+                  Форма обратного звонка с видео
+                  Модуль онлайн камер на объекте
+                  Чат-бот / 3D тур
+
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </section>
+
     </main>
 
 
