+ examples and integrations

--- a/src/index.html
+++ b/src/index.html
@@ -151,7 +151,7 @@
             </h2>
           </div>
 
-          <a class="button" href="javascript:void(0);" role="link">
+          <a class="button" href="javascript:void(0);" role="link" ontouchstart="">
             <span>Заказать сайт</span>
           </a>
 
@@ -278,6 +278,18 @@
 
       <section class="integrations">
         <div class="container">
+
+          <div class="bubbles bubbles--decorative">
+            <div class="circle circle--big">
+              <div class="circle-nested"></div>
+            </div>
+
+            <div class="square square--orange square--small">
+              <div class="square-nested"></div>
+            </div>
+
+          </div>
+
           <div class="integrations__text-wrap">
             <h2>
               Готовые решения и интеграции
@@ -555,7 +567,24 @@
       </section>
 
       <section class="examples">
+
         <div class="container">
+
+          <div class="bubbles bubbles--decorative">
+            <div class="circle circle--big">
+              <div class="circle-nested"></div>
+            </div>
+
+            <div class="circle circle--orange circle--small">
+              <div class="circle-nested"></div>
+            </div>
+
+            <div class="square square--orange square--small">
+              <div class="square-nested"></div>
+            </div>
+
+          </div>
+
           <h2>
             Примеры пакетных решений
           </h2>
@@ -568,20 +597,67 @@
 
               <div class="cards__card">
 
+                <div class="cards__headline">
+                  Сайт новостройки
+                </div>
                 <div class="cards__hr"></div>
                 <div class="cards__text">
                   Эффективный одностраничный сайт. Расскажет обо всех преимуществах объекта и позволит осуществить
                   подбор квартиры.
                 </div>
                 <div class="cards__hr"></div>
-                <div class="cards__headline">
-                  Выбор планировок квартир
-                  Ипотечный калькулятор
-                  Модуль онлайн камер на объекте
-                  Форма обратного звонка с видео
-                  Модуль онлайн камер на объекте
+                <div class="cards__subheadline">
+                  Выбор планировок квартир<br>
+                  Ипотечный калькулятор<br>
+                  Модуль онлайн камер на объекте<br>
+                  Форма обратного звонка с видео<br>
+                  Модуль онлайн камер на объекте<br>
                   Чат-бот / 3D тур
 
+                </div>
+                <a class="button button--hollow" href="javascript:void(0);" role="button" ontouchstart="">
+                  <span>Запросить смету</span>
+                </a>
+
+              </div>
+
+            </div>
+
+            <div class="cards__card-bg">
+
+              <div class="cards__card">
+
+                <div class="cards__headline">
+                  Сайт застройщика
+                </div>
+                <div class="cards__hr"></div>
+                <div class="cards__text">
+                  Полнофункциональный корпоративный сайт строительной компании
+                </div>
+                <div class="cards__hr"></div>
+                <div class="cards__subheadline">
+                  Коммерческая недвижимость<br>
+                  Модуль для обзора объекта 360°<br>
+                  Модуль онлайн камер на объекте<br>
+                  Форма обратного звонка с видео<br>
+                  Визуальный выбор<br>
+                  Ипотечный калькулятор<br>
+                  Каталог объектов <br>
+                  Чат-бот / 3D тур<br>
+                  Каталог квартир
+                </div>
+                <a class="button button--hollow" href="javascript:void(0);" role="button" ontouchstart="">
+                  <span>Запросить смету</span>
+                </a>
+
+                <div class="bubbles">
+
+                  <div class="bubble-wrap bubble-wrap-rectangle">
+                    <div class="bubble">
+                      <img src="assets/img/icons/office.webp" alt="">
+                      <span>Лучшее предложение</span>
+                    </div>
+                  </div>
                 </div>
               </div>
 
@@ -602,13 +678,13 @@
 
       <div class="aside__icon-wrapper">
 
-        <a href="javascript:void(0);" class="aside__icon">
+        <a href="javascript:void(0);" class="aside__icon" role="link">
           <svg class="svg-icon">
             <use xlink:href="#i-inst"></use>
           </svg>
         </a>
 
-        <a href="javascript:void(0);" class="aside__icon">
+        <a href="javascript:void(0);" class="aside__icon" role="link">
           <svg class="svg-icon">
             <use xlink:href="#i-mail"></use>
           </svg>
@@ -616,7 +692,7 @@
 
       </div>
 
-      <a class="button" href="javascript:void(0);" role="link">
+      <a class="button" href="javascript:void(0);" role="button" ontouchstart="">
         <span>Заказать сайт</span>
       </a>
     </aside>
