--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
   <link rel="stylesheet preload prefetch" as="style" href="assets/css/styles.css" />
 
   <meta name="msapplication-TileColor" content="#000000" />
+
   <link rel="icon" type="image/png" sizes="16x16" href="assets/fav/favicon-16.png" />
   <link rel="icon" type="image/png" sizes="32x32" href="assets/fav/favicon-32.png" />
   <link rel="icon" type="image/png" sizes="152x152" href="assets/fav/favicon-152.png" />
@@ -666,11 +667,55 @@
         </div>
       </section>
 
+      <section class="result">
+        <div class="container">
+          <h2>
+            Что будет в итоге?
+          </h2>
+
+          <p>Готовые функции и интеграции, необходимые каждому застройщику уже реализованы и готовы к использованию на
+            вашем новом сайте</p>
+
+
+        </div>
+
+        <div class="result__pic">
+          <picture>
+            <source media="(min-width: 1280px)" srcset="assets/img/manOnBoat-X.webp">
+            <source media="(min-width: 768px)" srcset="assets/img/manOnBoat-M.webp">
+            <img src="assets/img/manOnBoat-S.webp" alt="">
+          </picture>
+        </div>
+
+        <div class="container">
+          <div class="bubbles">
+
+            <div class="bubble-wrap bubble-wrap-rectangle">
+              <div class="bubble">
+                <img src="assets/img/icons/coin.webp" alt="">
+                <span>Счастливы вы</span>
+              </div>
+            </div>
+
+            <div class="bubble-wrap bubble-wrap-rectangle">
+              <div class="bubble">
+                <img src="assets/img/icons/office.webp" alt="">
+                <span>Счастливы ваши клиенты</span>
+              </div>
+            </div>
+
+          </div>
+
+
+        </div>
+
+      </section>
+
     </main>
 
 
     <aside>
-      <a href="javascript:void(0);">О нас</a>
+      <a href=" javascript:void(0);">О нас</a>
       <a href="javascript:void(0);">Преимущества</a>
       <a href="javascript:void(0);">Интеграции</a>
       <a href="javascript:void(0);">Тарифы</a>
