--- a/src/index.html
+++ b/src/index.html
@@ -708,6 +708,53 @@
 
       </section>
 
+      <section class="narrate">
+        <div class="container">
+
+          <div class="bubbles bubbles--decorative">
+            <div class="circle circle--orange circle--small">
+              <div class="circle-nested"></div>
+            </div>
+
+            <div class="circle circle--big">
+              <div class="circle-nested"></div>
+            </div>
+
+            <div class="circle circle--orange circle--small">
+              <div class="circle-nested"></div>
+            </div>
+          </div>
+
+          <div class="narrate__text">
+            <p>Вы правильно мыслите, мы действительно <span>делаем сайты</span> не только для застройщиков</p>
+            <p>Расскажи нам про свой бизнес, и мы предложим то, что нужно <span>именно Вам!</span></p>
+          </div>
+
+          <div class="form">
+
+            <div class="bubble-wrap bubble-wrap-rectangle">
+              <div class="bubble">
+                <img src="assets/img/icons/pencil.webp" alt="">
+                <span>Рассказать ...</span>
+              </div>
+            </div>
+
+            <form class="form-inner">
+              <input name="name" type="text" placeholder="Имя" autocomplete="on" required>
+              <input name="business" type="text" placeholder="Сфера бизнеса" autocomplete="on" required>
+              <input class="js-phone" id="tel" name="phone" type="tel" placeholder="Телефон" autocomplete="on"
+                maxlength="16" required>
+              <input type="submit">
+
+              <p>Нажимая на кнопку, Вы соглашаетесь<br>
+                на <a href="javascript:void(0);">обработку персональных данных</a></p>
+            </form>
+
+          </div>
+
+        </div>
+      </section>
+
     </main>
 
 
