'stats' almost done

--- a/src/index.html
+++ b/src/index.html
@@ -152,7 +152,7 @@
             </h2>
           </div>
 
-          <a class="button" href="javascript:void(0);" role="link" ontouchstart="">
+          <a class="button" href="javascript:void(0);" role="link" ontouchstart=''>
             Заказать сайт
           </a>
 
@@ -743,7 +743,7 @@
               <input name="name" type="text" placeholder="Имя" autocomplete="on" required>
               <input name="business" type="text" placeholder="Сфера бизнеса" autocomplete="on" required>
               <input class="js-phone" id="tel" name="phone" type="tel" placeholder="Телефон" autocomplete="on"
-                maxlength="16" required>
+                maxlength="17" required>
               <input type="submit">
 
               <p>Нажимая на кнопку, Вы соглашаетесь<br>
@@ -755,6 +755,29 @@
         </div>
       </section>
 
+      <section class="stats">
+        <div class="container">
+          <div class="stats__wrap">
+
+            <div class="stats__years">
+              <div class="stats__num">300</div>
+              <div class="stats__text">лет на рынке</div>
+            </div>
+
+            <div class="stats__projects">
+              <div class="stats__num">100500</div>
+              <div class="stats__text">готовых сайтов</div>
+            </div>
+
+
+            <div class="stats__brandbooks">
+              <div class="stats__num">200600</div>
+              <div class="stats__text">брендбуков</div>
+            </div>
+
+          </div>
+        </div>
+      </section>
     </main>
 
 
