--- a/src/index.html
+++ b/src/index.html
@@ -759,6 +759,32 @@
         <div class="container">
           <div class="stats__wrap">
 
+            <div class="bubbles">
+              <div class="bubble-wrap bubble-wrap-square--big">
+                <div class="bubble">
+                  <img src="assets/img/icons/trophy.webp" alt="">
+                </div>
+              </div>
+
+              <div class="bubble-wrap bubble-wrap-square--big">
+                <div class="bubble">
+                  <img src="assets/img/icons/desktop.webp" alt="">
+                </div>
+              </div>
+
+              <div class="bubble-wrap bubble-wrap-square--big">
+                <div class="bubble">
+                  <img src="assets/img/icons/ledger.webp" alt="">
+                </div>
+              </div>
+
+              <div class="bubbles bubbles--decorative">
+                <div class="circle circle--orange circle--small">
+                  <div class="circle-nested"></div>
+                </div>
+              </div>
+            </div>
+
             <div class="stats__years">
               <div class="stats__num">300</div>
               <div class="stats__text">лет на рынке</div>
@@ -776,6 +802,8 @@
             </div>
 
           </div>
+
+          <p>Мы намеренно поставили этот слайд в конце, т.к. бьют в грудь себя все, а важнее сначала показать товар лицом...бла.бла.бла</p>
         </div>
       </section>
     </main>
