+ animations on tooglers

--- a/src/index.html
+++ b/src/index.html
@@ -362,7 +362,7 @@
           <div class="cards">
             <div class="cards__card-bg">
               <div class="cards__card">
-                <div class="cards__toggle"></div>
+                <div class="cards__toggle js-anim"></div>
                 <div class="cards__headline">Каталог квартир по параметрам</div>
                 <hr class="cards__hr" />
                 <div class="cards__text">
@@ -373,7 +373,7 @@
 
             <div class="cards__card-bg">
               <div class="cards__card">
-                <div class="cards__toggle"></div>
+                <div class="cards__toggle js-anim"></div>
                 <div class="cards__headline">3D тур</div>
                 <hr class="cards__hr" />
                 <div class="cards__text">
@@ -392,7 +392,7 @@
 
             <div class="cards__card-bg">
               <div class="cards__card">
-                <div class="cards__toggle"></div>
+                <div class="cards__toggle js-anim"></div>
                 <div class="cards__headline">Шахматка выбора квартир</div>
                 <hr class="cards__hr" />
                 <div class="cards__text">
@@ -403,7 +403,7 @@
 
             <div class="cards__card-bg">
               <div class="cards__card">
-                <div class="cards__toggle"></div>
+                <div class="cards__toggle js-anim"></div>
                 <div class="cards__headline">
                   Форма обратного звонка с видео
                 </div>
@@ -416,7 +416,7 @@
 
             <div class="cards__card-bg">
               <div class="cards__card">
-                <div class="cards__toggle"></div>
+                <div class="cards__toggle js-anim"></div>
                 <div class="cards__headline">
                   Каталог коммерческой недвижимости
                 </div>
@@ -430,7 +430,7 @@
 
             <div class="cards__card-bg">
               <div class="cards__card">
-                <div class="cards__toggle"></div>
+                <div class="cards__toggle js-anim"></div>
                 <div class="cards__headline">Чат-бот</div>
                 <hr class="cards__hr" />
                 <div class="cards__text">
@@ -449,7 +449,7 @@
 
             <div class="cards__card-bg">
               <div class="cards__card">
-                <div class="cards__toggle"></div>
+                <div class="cards__toggle js-anim"></div>
                 <div class="cards__headline">Ипотечный калькулятор</div>
                 <hr class="cards__hr" />
                 <div class="cards__text">
@@ -468,7 +468,7 @@
 
             <div class="cards__card-bg">
               <div class="cards__card">
-                <div class="cards__toggle"></div>
+                <div class="cards__toggle js-anim"></div>
                 <div class="cards__headline">
                   Модуль для обзора объекта 360°
                 </div>
@@ -482,7 +482,7 @@
 
             <div class="cards__card-bg">
               <div class="cards__card">
-                <div class="cards__toggle"></div>
+                <div class="cards__toggle js-anim"></div>
                 <div class="cards__headline">
                   Модуль онлайн камер на объекте
                 </div>
@@ -501,7 +501,7 @@
             <div class="cards">
               <div class="cards__card-bg">
                 <div class="cards__card">
-                  <div class="cards__toggle"></div>
+                  <div class="cards__toggle js-anim"></div>
                   <div class="cards__headline">
                     Интеграция<br />с системой Profitbase
                   </div>
@@ -510,7 +510,7 @@
 
               <div class="cards__card-bg">
                 <div class="cards__card">
-                  <div class="cards__toggle"></div>
+                  <div class="cards__toggle js-anim"></div>
                   <div class="cards__headline">
                     Интеграция с CRM (Bitrix24, amoCRM)
                   </div>
@@ -519,14 +519,14 @@
 
               <div class="cards__card-bg">
                 <div class="cards__card">
-                  <div class="cards__toggle"></div>
+                  <div class="cards__toggle js-anim"></div>
                   <div class="cards__headline">Интеграция с Call Tracking</div>
                 </div>
               </div>
 
               <div class="cards__card-bg">
                 <div class="cards__card">
-                  <div class="cards__toggle"></div>
+                  <div class="cards__toggle js-anim"></div>
                   <div class="cards__headline">
                     Интеграция с Яндекс Недвижимость
                   </div>
@@ -535,28 +535,28 @@
 
               <div class="cards__card-bg">
                 <div class="cards__card">
-                  <div class="cards__toggle"></div>
+                  <div class="cards__toggle js-anim"></div>
                   <div class="cards__headline">Интеграция с ЦИАН</div>
                 </div>
               </div>
 
               <div class="cards__card-bg">
                 <div class="cards__card">
-                  <div class="cards__toggle"></div>
+                  <div class="cards__toggle js-anim"></div>
                   <div class="cards__headline">Интеграция с ROIstat</div>
                 </div>
               </div>
 
               <div class="cards__card-bg">
                 <div class="cards__card">
-                  <div class="cards__toggle"></div>
+                  <div class="cards__toggle js-anim"></div>
                   <div class="cards__headline">Интеграция с ДомКлик</div>
                 </div>
               </div>
 
               <div class="cards__card-bg">
                 <div class="cards__card">
-                  <div class="cards__toggle"></div>
+                  <div class="cards__toggle js-anim"></div>
                   <div class="cards__headline">Интеграция с Авито</div>
                 </div>
               </div>
