--- a/src/index.html
+++ b/src/index.html
@@ -150,7 +150,7 @@
 
     <div class="wrap">
 
-      <div class="popup">
+      <div class="popup js-popup">
         <div class="form">
           <div class="bubble-wrap bubble-wrap-rectangle">
             <div class="bubble">
@@ -196,7 +196,7 @@
           </form>
         </div>
       </div>
-      
+
       <header>
         <div class="container">
           <div class="logo">
